@@ -156,6 +156,7 @@ static inline signed char i25_decode_end (zbar_decoder_t *dcode)
         return(ZBAR_NONE);
     }
 
+    dcode->buflen = dcode25->character;
     dcode->buf[dcode25->character] = '\0';
     dprintf(2, " [valid end]\n");
     dcode25->character = -1;
